/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

2025-06-15 02:25 UTC-0300 JoseQuintas jmcquintas-gmail.com
   * samples/demo3years.prg
     ! wrong name on button

2025-06-13 14:40 UTC-0300 JoseQuintas jmcquintas-gmail.com
   + samples/democalmonth.prg
   + samples/democalyear.prg
   + samples/democal3years.prg
   * samples/demoall.prg
   * samples/demoall.hbp
     ! democalmonth - month calendar with checkbox
     ! democalyear - call 12 x democalmonth, show all checked dates
     ! democal3years - call 3 x democalyear
     ! demoall - the 3 options on tabpages


2025-06-03 15:30 UTC+0200 Wilfried Brunken DF7BE
* utils/designer/Readme.txt
* utils/designer/designer.hbp
* utils/designer/hbmk.hbm (New)
   ! Stop instruction for non Windows OS inserted
   ! (need to port for LINUX and MacOS later)
   ! Prepared for hbmk.hbm


2025-06-03 15:15 UTC+0200 Wilfried Brunken DF7BE
* Install_RaspberryPi.txt
   ! Little correction Raspbery Pi


2025-06-01 19:00 UTC+0200 Wilfried Brunken DF7BE
* Install_RaspberryPi.txt
* include/sys/empty.txt (New, with dir "sys")
* install.txt
* missingioh.sh (New)
  ! Raspberry Pi installation successfully
  ! Troubleshooting missing include file sys/io.h"

2025-05-22 12:15 UTC-0300 Jose Quintas jmcquintas-gmail.com
   * samples/demofunc.prg
   * samples/demogrid1.prg
   * samples/demoimage1.prg
   * samples/demoimage2.prg
   * samples/demoimageview.prg
   * samples/demoini.prg
   * samples/demolistbox.prg
   * samples/demomenu.prg
   * samples/demomenubitmap.prg
   * samples/demomenuxml.prg
   * samples/demomonthcal.prg
   * samples/demonice.prg
   * samples/demonight.prg
   * samples/demoowner.prg
   * samples/demoshadebtn.prg