@@ -9,6 +9,7 @@ By DF7BE
 History:
 ========
 
+2025-06-20  DF7BE   ZBar support
 2025-06-03  DF7BE   Little correction
 2025-05-31  DF7BE   First issue
 
@@ -58,12 +59,14 @@ and run the commands.
 
 Now start the full upgrade:
 
-sudo apt update
-sudo apt upgrade -y
+sudo apt-get update
+sudo apt-get upgrade
+sudo apt-get update
 
 This takes some time.
 
 
+Install the developer environment:
 sudo apt install build-essential -y
 
 
@@ -174,6 +177,11 @@ sudo apt-get install libgtk2.0-dev libgtk-3-dev
   hbmk2 allhbp.hbp
  
 - At final, build your own HWGUI application
+
+
+- Install ZBar from package or by compiling from source code 
+  following the instructions in file
+  contrib/qrcode/qrdecode/ReadMe.txt
 
 
 We recommend to clone the SD card to get a
